--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </nav>
     <section>
-        <div id="cxCards">
+        <!-- <div id="cxCards">
 
             <div class="card">
                 <div class="cxImg">
@@ -198,7 +198,7 @@
                     <button class="btn">Ver Mais</button>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 </body>
 </html>
