--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <nav id="navbar">
-            <img src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="logo" id="logo">
+        <img src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="logo" id="logo">
         <div class="cxNav">
             <a class="nav-link" href="index.html">Freelancers</a>
             <a class="nav-link" href="login.html">login</a>
             <a class="nav-link" href="cadastro.html">Cadastar</a>
         </div>
+        <button id="btnRes">
+           <!-- <img src="" alt=""> -->
+           menu
+        </button>
     </nav>
     <section>
         <!-- <div id="cxCards">
@@ -201,4 +205,5 @@
         </div> -->
     </section>
 </body>
+<script src="navbarAction.js"></script>
 </html>
