--- a/cadastro.html
+++ b/cadastro.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastar</title>
+    <title>Freelas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav id="navbar">
         <img src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="logo" id="logo">
         <div class="cxNav">
-            <a class="nav-link" href="index.html">Freelancers</a>
+            <a class="nav-link ativo" href="index.html">Bem vindo</a>
             <a class="nav-link" href="login.html">login</a>
             <a class="nav-link" href="cadastro.html">Cadastar</a>
+            <a class="nav-link" href="freelancers.html">Frelancers</a>
         </div>
+        <button id="btnRes">
+           <!-- <img src="" alt=""> -->
+           Menu
+        </button>
     </nav>
     
-    <form action="">
-        <input type="text" />
-    </form>
 </body>
+<script src="navbarAction.js"></script>
 </html>
