--- a/index.html
+++ b/index.html
@@ -11,198 +11,15 @@
     <nav id="navbar">
         <img src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="logo" id="logo">
         <div class="cxNav">
-            <a class="nav-link" href="index.html">Freelancers</a>
+            <a class="nav-link ativo" href="index.html">Bem vindo</a>
             <a class="nav-link" href="login.html">login</a>
             <a class="nav-link" href="cadastro.html">Cadastar</a>
+            <a class="nav-link" href="freelancers.html">Frelancers</a>
         </div>
-        <button id="btnRes">
-           <!-- <img src="" alt=""> -->
-           menu
-        </button>
+        <button id="btnRes">Menu</button>
     </nav>
     <section>
-        <!-- <div id="cxCards">
 
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-            
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="cxImg">
-                    <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
-                </div>
-                <div class="txtFreelancer">
-                        <h5>Leonardo</h5>
-                    <p>
-                        Desenvolvedor Freelancer
-                    </p>
-                </div>
-                <div>
-                    <button class="btn">Ver Mais</button>
-                </div>
-            </div>
-        </div> -->
     </section>
 </body>
 <script src="navbarAction.js"></script>
