--- a/freelancers.html
+++ b/freelancers.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freelas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav id="navbar">
@@ -203,5 +203,5 @@
         </div>
     </section>
 </body>
-<script src="navbarAction.js"></script>
+<script src="js/navbarAction.js"></script>
 </html>
