--- a/freelancers.html
+++ b/freelancers.html
@@ -20,7 +20,27 @@
     </nav>
     <section>
 
+            <div class="cxTitulo">
+                <h1>VEJA NOSSOS FREELANCERS</h1>
+            </div>
+
         <div id="cxCards">
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
 
             <div class="card">
                 <div class="cxSuper">
@@ -34,12 +54,131 @@
                         </p>
                     </div>
                 </div>
-                <div>
+                <div class="cxBtn">
                     <button class="btn">Ver Mais</button>
                 </div>
             </div>
-            
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="cxSuper">
+                    <div class="cxImg">
+                        <img class="imgUser" src="https://avatars.githubusercontent.com/u/86269559?v=4" alt="">
+                    </div>
+                    <div class="txtFreelancer">
+                            <h5>Leonardo1</h5>
+                        <p>
+                            Desenvolvedor Freelancer
+                        </p>
+                    </div>
+                </div>
+                <div class="cxBtn">
+                    <button class="btn">Ver Mais</button>
+                </div>
+            </div>
         </div>
+
 
     </section>
 </body>
